fix: implement background body scroll lock on mobile when navigation drawer is open

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -524,9 +524,11 @@ a {
   top: 10px;
 }
 
-/* Body & Header styles when menu is open */
 body.menu-open {
-  overflow: hidden;
+  overflow: hidden !important;
+  position: fixed !important;
+  width: 100% !important;
+  height: 100% !important;
 }
 
 body.menu-open .header {
